Bug 1596458 part 2.  Fix the innerHTML setter for shadow DOM cases in XML to supply the right context.  r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D53077

--HG--
extra : moz-landing-system : lando